<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editVendorDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/editVendorDetailsHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editingBesar"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="500dp"
            android:orientation="vertical"
            android:padding="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <!-- Banner Image -->
                <ImageButton
                    android:id="@+id/bannerImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <!-- Profile Image -->
                <ImageButton
                    android:id="@+id/profileImageButton"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/circular_profile_picture"
                    android:clipToOutline="true"
                    android:elevation="4dp"
                    android:scaleType="centerCrop" />
            </FrameLayout>

            <!-- Vendor Details -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/vendorNumberEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minWidth="32sp"
                    android:text="@string/vendorNumberCompact"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/standNumberEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/standNumber"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                android:background="@drawable/rounded_textview_background_medium"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:scrollHorizontally="false"
                android:text="@string/description"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelVendorDetailEdits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/accentColor"
                    android:text="@string/cancelBesar" />

                <Button
                    android:id="@+id/saveVendorDetailEdits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/accentColor"
                    android:text="@string/saveBesar"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
